--- a/.flowconfig
+++ b/.flowconfig
@@ -1,8 +1,9 @@
-# 2016 October 24
+# 2016 December 29
 # https://github.com/bevry/base
 [ignore]
 .*/docs/.*
 .*/es2015/.*
+.*/test/.*
 
 [options]
 module.ignore_non_literal_requires=true
