--- a/package.json
+++ b/package.json
@@ -34,16 +34,19 @@
       "daviddm",
       "daviddmdev",
       "---",
-      "slackin",
       "patreon",
+      "opencollective",
       "gratipay",
       "flattr",
       "paypal",
       "bitcoin",
-      "wishlist"
+      "wishlist",
+      "---",
+      "slackin"
     ],
     "config": {
       "patreonUsername": "bevry",
+      "opencollectiveUsername": "bevry",
       "gratipayUsername": "bevry",
       "flattrUsername": "balupton",
       "paypalURL": "https://bevry.me/paypal",
@@ -69,7 +72,10 @@
   "bugs": {
     "url": "https://github.com/bevry/projectz/issues"
   },
-  "repository": "bevry/projectz",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bevry/projectz.git"
+  },
   "engines": {
     "node": ">=0.12"
   },
@@ -104,27 +110,9 @@
       ]
     }
   ],
-  "preferGlobal": true,
   "bin": "bin.js",
+  "preferGlobal": true,
   "main": "index.js",
-  "scripts": {
-    "our:clean": "rm -Rf ./docs ./es2015",
-    "our:compile": "npm run our:compile:es2015",
-    "our:compile:es2015": "babel ./source --out-dir ./es2015 --presets es2015",
-    "our:meta": "npm run our:meta:projectz",
-    "our:meta:projectz": "npm run custom:meta:projectz",
-    "custom:meta:projectz": "node --harmony ./bin.js compile",
-    "our:verify": "npm run our:verify:eslint && npm run our:verify:flow",
-    "our:verify:eslint": "eslint --fix ./source",
-    "our:verify:flow": "flow check",
-    "our:test": "npm run our:verify && npm test",
-    "our:release": "npm run our:release:prepare && npm run our:release:publish && npm run our:release:tag && npm run our:release:push",
-    "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
-    "our:release:publish": "npm publish",
-    "our:release:tag": "git tag v$npm_package_version -a",
-    "our:release:push": "git push origin master && git push origin --tags",
-    "test": "node --harmony ./test.js"
-  },
   "dependencies": {
     "badges": "^1.2.1",
     "caterpillar": "^3.0.1",
@@ -138,7 +126,7 @@
     "commander": "^2.9.0",
     "cson": "^4.0.0",
     "eachr": "^3.2.0",
-    "editions": "^1.3.1",
+    "editions": "^1.3.3",
     "extendr": "^3.2.2",
     "fellow": "^2.3.0",
     "safefs": "^4.1.0",
@@ -148,13 +136,35 @@
     "typechecker": "^4.3.0"
   },
   "devDependencies": {
-    "assert-helpers": "^4.4.0",
-    "babel-cli": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
-    "eslint": "^3.8.1",
-    "flow-bin": "^0.33.0",
-    "joe": "^1.8.0",
-    "joe-reporter-console": "^1.2.1",
+    "assert-helpers": "^4.5.0",
+    "babel-cli": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "eslint": "^3.19.0",
+    "flow-bin": "^0.43.1",
+    "joe": "^2.0.2",
+    "joe-reporter-console": "^2.0.1",
+    "projectz": "^1.3.2",
     "safeps": "^6.3.0"
+  },
+  "scripts": {
+    "our:setup": "npm run our:setup:npm",
+    "our:setup:npm": "npm install",
+    "our:clean": "rm -Rf ./docs ./es2015 ./es5 ./out",
+    "our:compile": "npm run our:compile:es2015",
+    "our:compile:es2015": "babel ./source --out-dir ./es2015 --presets es2015",
+    "our:meta": "npm run our:meta:projectz",
+    "our:meta:projectz": "projectz compile",
+    "our:verify": "npm run our:verify:eslint && npm run our:verify:flow",
+    "our:verify:eslint": "eslint --fix ./source",
+    "our:verify:flow": "flow check",
+    "our:test": "npm run our:verify && npm test",
+    "our:release": "npm run our:release:prepare && npm run our:release:check && npm run our:release:tag && npm run our:release:push",
+    "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
+    "our:release:check": "npm run our:release:check:changelog && npm run our:release:check:dirty",
+    "our:release:check:changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
+    "our:release:check:dirty": "git diff --exit-code",
+    "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
+    "our:release:push": "git push origin master && git push origin --tags",
+    "test": "node --harmony ./test.js --joe-reporter=console"
   }
 }
