--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.4.0",
+  "version": "1.5.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -35,24 +35,25 @@
       "daviddmdev",
       "---",
       "patreon",
-      "opencollective",
-      "gratipay",
       "flattr",
+      "liberapay",
+      "thanksapp",
+      "boostlab",
+      "buymeacoffee",
+      "opencollective",
+      "crypto",
       "paypal",
-      "bitcoin",
-      "wishlist",
-      "---",
-      "slackin"
+      "wishlist"
     ],
     "config": {
-      "patreonUsername": "bevry",
-      "opencollectiveUsername": "bevry",
-      "gratipayUsername": "bevry",
+      "buymeacoffeeUsername": "balupton",
+      "cryptoURL": "https://bevry.me/crypto",
       "flattrUsername": "balupton",
+      "liberapayUsername": "bevry",
+      "opencollectiveUsername": "bevry",
+      "patreonUsername": "bevry",
       "paypalURL": "https://bevry.me/paypal",
-      "bitcoinURL": "https://bevry.me/bitcoin",
-      "wishlistURL": "https://bevry.me/wishlist",
-      "slackinURL": "https://slack.bevry.me"
+      "wishlistURL": "https://bevry.me/wishlist"
     }
   },
   "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
@@ -67,7 +68,8 @@
     "Zearin (https://github.com/Zearin)",
     "vsopvsop (https://github.com/vsopvsop)",
     "Shahar Or <mightyiampresence@gmail.com> (http://mightyi.am)",
-    "Zlatan Vasović <zlatanvasovic@gmail.com> (http://zdroid.github.io)"
+    "Zlatan Vasović <zlatanvasovic@gmail.com> (http://zdroid.github.io)",
+    "Shahar Or (https://github.com/mightyiam)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/projectz/issues"
@@ -77,14 +79,14 @@
     "url": "https://github.com/bevry/projectz.git"
   },
   "engines": {
-    "node": ">=0.12"
+    "node": ">=6"
   },
   "editions": [
     {
       "description": "Source + ESNext + Require + Flow Type Comments",
       "directory": "source",
       "entry": "index.js",
-      "syntaxes": [
+      "tags": [
         "javascript",
         "esnext",
         "require",
@@ -96,64 +98,47 @@
         "const",
         "let",
         "flow type comments"
-      ]
-    },
-    {
-      "description": "Babel Compiled + ES2015 + Require",
-      "directory": "es2015",
-      "entry": "index.js",
-      "syntaxes": [
-        "javascript",
-        "es2015",
-        "require",
-        "symbols"
-      ]
+      ],
+      "engines": {
+        "node": true
+      }
     }
   ],
   "bin": "bin.js",
   "preferGlobal": true,
-  "main": "index.js",
+  "main": "source/index.js",
   "dependencies": {
-    "badges": "^1.2.4",
-    "caterpillar": "^3.0.1",
+    "badges": "^1.2.8",
+    "caterpillar": "^3.1.2",
     "caterpillar-filter": "^3.0.0",
     "caterpillar-human": "^3.0.0",
-    "chainy-core": "^1.6.0",
-    "chainy-plugin-each": "^1.1.0",
-    "chainy-plugin-feed": "^1.0.0",
-    "chainy-plugin-map": "^1.0.5",
-    "chainy-plugin-set": "^1.0.2",
-    "commander": "^2.9.0",
-    "cson": "^4.0.0",
+    "commander": "^2.19.0",
+    "cson": "^5.1.0",
     "eachr": "^3.2.0",
-    "editions": "^1.3.3",
-    "extendr": "^3.2.2",
+    "extendr": "^3.3.0",
     "fellow": "^2.3.0",
+    "node-fetch": "^2.3.0",
     "safefs": "^4.1.0",
-    "spdx": "^0.5.1",
-    "spdx-license-list": "^3.0.1",
+    "spdx": "^0.5.2",
+    "spdx-license-list": "^5.0.0",
     "taskgroup": "5",
-    "typechecker": "^4.4.1"
+    "typechecker": "^4.6.0"
   },
   "devDependencies": {
-    "assert-helpers": "^4.5.0",
-    "babel-cli": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "eslint": "^3.19.0",
-    "flow-bin": "^0.43.1",
+    "assert-helpers": "^4.5.1",
+    "eslint": "^5.9.0",
+    "flow-bin": "^0.86.0",
     "joe": "^2.0.2",
-    "joe-reporter-console": "^2.0.1",
-    "projectz": "^1.3.2",
-    "safeps": "^6.3.0"
+    "joe-reporter-console": "^2.0.2",
+    "safeps": "^7.0.1"
   },
   "scripts": {
     "our:setup": "npm run our:setup:npm",
     "our:setup:npm": "npm install",
     "our:clean": "rm -Rf ./docs ./es2015 ./es5 ./out",
-    "our:compile": "npm run our:compile:es2015",
-    "our:compile:es2015": "babel ./source --out-dir ./es2015 --presets es2015",
+    "our:compile": "echo 'no need for this project'",
     "our:meta": "npm run our:meta:projectz",
-    "our:meta:projectz": "projectz compile",
+    "our:meta:projectz": "./bin.js compile",
     "our:verify": "npm run our:verify:eslint && npm run our:verify:flow",
     "our:verify:eslint": "eslint --fix ./source",
     "our:verify:flow": "flow check",
@@ -165,6 +150,6 @@
     "our:release:check:dirty": "git diff --exit-code",
     "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
     "our:release:push": "git push origin master && git push origin --tags",
-    "test": "node --harmony ./test.js --joe-reporter=console"
+    "test": "node --harmony ./source/test.js --joe-reporter=console"
   }
 }
