--- a/package.json
+++ b/package.json
@@ -83,25 +83,19 @@
   },
   "editions": [
     {
-      "description": "Source + ESNext + Require + Flow Type Comments",
+      "description": "esnext source code with require for modules",
       "directory": "source",
       "entry": "index.js",
+      "engines": {
+        "node": "6 || 8 || 10 || 11",
+        "browsers": false
+      },
       "tags": [
         "javascript",
         "esnext",
         "require",
-        "classes",
-        "arrows",
-        "destructuring",
-        "defaults",
-        "spread",
-        "const",
-        "let",
         "flow type comments"
-      ],
-      "engines": {
-        "node": true
-      }
+      ]
     }
   ],
   "bin": "bin.js",
@@ -130,26 +124,28 @@
     "flow-bin": "^0.86.0",
     "joe": "^2.0.2",
     "joe-reporter-console": "^2.0.2",
-    "safeps": "^7.0.1"
+    "safeps": "^7.0.1",
+    "valid-directory": "^1.0.0"
   },
   "scripts": {
-    "our:setup": "npm run our:setup:npm",
-    "our:setup:npm": "npm install",
-    "our:clean": "rm -Rf ./docs ./es2015 ./es5 ./out",
-    "our:compile": "echo 'no need for this project'",
+    "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out",
+    "our:compile": "echo no need for this project",
+    "our:deploy": "echo no need for this project",
     "our:meta": "npm run our:meta:projectz",
     "our:meta:projectz": "./bin.js compile",
-    "our:verify": "npm run our:verify:eslint && npm run our:verify:flow",
-    "our:verify:eslint": "eslint --fix ./source",
-    "our:verify:flow": "flow check",
-    "our:test": "npm run our:verify && npm test",
-    "our:release": "npm run our:release:prepare && npm run our:release:check && npm run our:release:tag && npm run our:release:push",
+    "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
+    "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
+    "our:release:check-dirty": "git diff --exit-code",
     "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
-    "our:release:check": "npm run our:release:check:changelog && npm run our:release:check:dirty",
-    "our:release:check:changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
-    "our:release:check:dirty": "git diff --exit-code",
-    "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
     "our:release:push": "git push origin master && git push origin --tags",
+    "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
+    "our:setup": "npm run our:setup:npm",
+    "our:setup:npm": "npm install",
+    "our:test": "npm run our:verify && npm test",
+    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:flow",
+    "our:verify:directory": "npx valid-directory",
+    "our:verify:eslint": "eslint --fix ./source/**",
+    "our:verify:flow": "flow check",
     "test": "node --harmony ./source/test.js --joe-reporter=console"
   }
 }
