--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -111,6 +111,7 @@
     "eachr": "^3.2.0",
     "extendr": "^3.3.0",
     "fellow": "^2.3.0",
+    "githubauthquerystring": "0.0.1",
     "node-fetch": "^2.3.0",
     "safefs": "^4.1.0",
     "spdx": "^0.5.2",
