prevent package-lock from being read, switched from cson to season

--- a/package.json
+++ b/package.json
@@ -106,13 +106,13 @@
     "caterpillar-filter": "^3.0.0",
     "caterpillar-human": "^3.0.0",
     "commander": "^2.19.0",
-    "cson": "^5.1.0",
     "eachr": "^3.2.0",
     "extendr": "^3.3.0",
     "fellow": "^2.3.0",
     "githubauthquerystring": "1.0.2",
     "node-fetch": "^2.3.0",
     "safefs": "^4.1.0",
+    "season": "^6.0.2",
     "spdx": "^0.5.2",
     "spdx-license-list": "^5.0.0",
     "taskgroup": "5",
