--- a/package.json
+++ b/package.json
@@ -60,11 +60,13 @@
   "maintainers": [
     "Benjamin Lupton <b@lupton.cc> (http://balupton.com)",
     "Rob Loach <robloach@gmail.com> (http://robloach.net)"
+  	"James George <jamesgeorge998001@gmail.com> (https://github.com/jamesgeorge007)"
   ],
   "contributors": [
     "Benjamin Lupton <b@lupton.cc> (http://balupton.com)",
     "Peter Flannery (https://github.com/pflannery)",
     "Rob Loach <robloach@gmail.com> (http://robloach.net)",
+    "James George <jamesgeorge998001@gmail.com> (https://github.com/jamesgeorge007)",
     "Zearin (https://github.com/Zearin)",
     "vsopvsop (https://github.com/vsopvsop)",
     "Shahar Or <mightyiampresence@gmail.com> (http://mightyi.am)",
