--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
     "Benjamin Lupton <b@lupton.cc> (http://balupton.com)",
-    "Rob Loach <robloach@gmail.com> (http://robloach.net)"
+    "Rob Loach <robloach@gmail.com> (http://robloach.net)",
   	"James George <jamesgeorge998001@gmail.com> (https://github.com/jamesgeorge007)"
   ],
   "contributors": [
