--- a/package.json
+++ b/package.json
@@ -69,9 +69,9 @@
     "James George <jamesgeorge998001@gmail.com> (http://ghuser.io/jamesgeorge007)",
     "Zearin (https://github.com/Zearin)",
     "vsopvsop (https://github.com/vsopvsop)",
-    "Shahar Or <mightyiampresence@gmail.com> (http://mightyi.am)",
     "Zlatan Vasović <zlatanvasovic@gmail.com> (http://zdroid.github.io)",
-    "Shahar Or (https://github.com/mightyiam)"
+    "Peter Chanthamynavong <peterkc@gmail.com> (http://www.blizzard.com)",
+    "Shahar Dawn Or (http://mightyi.am)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/projectz/issues"
@@ -81,7 +81,7 @@
     "url": "https://github.com/bevry/projectz.git"
   },
   "engines": {
-    "node": ">=6"
+    "node": ">=8"
   },
   "editions": [
     {
@@ -95,7 +95,7 @@
         "flow type comments"
       ],
       "engines": {
-        "node": "6 || 8 || 10 || 11",
+        "node": "8 || 10 || 11 || 12",
         "browsers": false
       }
     }
@@ -103,39 +103,38 @@
   "bin": "bin.js",
   "main": "source/index.js",
   "dependencies": {
-    "badges": "^1.2.8",
-    "caterpillar": "^3.1.2",
-    "caterpillar-filter": "^3.0.0",
+    "badges": "^1.3.0",
+    "caterpillar": "^3.2.0",
+    "caterpillar-filter": "^3.1.0",
     "caterpillar-human": "^3.0.0",
-    "commander": "^2.19.0",
+    "commander": "^3.0.1",
     "eachr": "^3.2.0",
-    "extendr": "^3.3.0",
-    "fellow": "^2.3.0",
+    "extendr": "^3.4.1",
+    "fellow": "^2.4.0",
     "githubauthquerystring": "1.0.2",
-    "node-fetch": "^2.3.0",
+    "node-fetch": "^2.6.0",
     "safefs": "^4.1.0",
     "season": "^6.0.2",
     "spdx-expression-parse": "^3.0.0",
     "spdx-license-list": "^6.1.0",
     "taskgroup": "5",
-    "typechecker": "^4.6.0"
+    "typechecker": "^4.7.0"
   },
   "devDependencies": {
-    "assert-helpers": "^4.8.0",
-    "eslint": "^5.10.0",
-    "eslint-config-bevry": "^1.0.2",
-    "eslint-config-prettier": "^3.3.0",
+    "assert-helpers": "^4.9.6",
+    "eslint": "^6.3.0",
+    "eslint-config-bevry": "^1.2.1",
+    "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-flow-vars": "^0.5.0",
-    "eslint-plugin-prettier": "^3.0.0",
-    "flow-bin": "^0.89.0",
-    "joe-reporter-console": "^2.0.2",
+    "eslint-plugin-prettier": "^3.1.0",
+    "flow-bin": "^0.107.0",
     "kava": "^3.1.0",
-    "prettier": "^1.15.3",
+    "prettier": "^1.18.2",
     "safeps": "^7.0.1",
     "valid-directory": "^1.0.0"
   },
   "scripts": {
-    "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out",
+    "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
     "our:compile": "echo no need for this project",
     "our:deploy": "echo no need for this project",
     "our:meta": "npm run our:meta:projectz",
@@ -146,13 +145,14 @@
     "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
     "our:release:push": "git push origin master && git push origin --tags",
     "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
-    "our:setup": "npm run our:setup:npm",
-    "our:setup:npm": "npm install",
+    "our:setup": "npm run our:setup:install",
+    "our:setup:install": "npm install",
     "our:test": "npm run our:verify && npm test",
-    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:flow",
+    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:flow && npm run our:verify:prettier",
     "our:verify:directory": "npx valid-directory",
-    "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx './source/**/*.*'",
+    "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
     "our:verify:flow": "flow check",
+    "our:verify:prettier": "prettier --write ./source/**",
     "test": "node ./source/test.js"
   },
   "eslintConfig": {
