--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.7.4",
+  "version": "1.7.5",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -71,7 +71,7 @@
     "vsopvsop (https://github.com/vsopvsop)",
     "Zlatan Vasović <zlatanvasovic@gmail.com> (http://zdroid.github.io)",
     "Peter Chanthamynavong <peterkc@gmail.com> (http://www.blizzard.com)",
-    "Shahar Dawn Or (http://mightyi.am)"
+    "Shahar Dawn Or <mightyiampresence@gmail.com> (http://mightyi.am)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/projectz/issues"
