--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
       "patreon",
       "flattr",
       "liberapay",
-      "thanksapp",
-      "boostlab",
       "buymeacoffee",
       "opencollective",
       "crypto",
@@ -53,8 +51,13 @@
       "opencollectiveUsername": "bevry",
       "patreonUsername": "bevry",
       "paypalURL": "https://bevry.me/paypal",
-      "wishlistURL": "https://bevry.me/wishlist"
+      "wishlistURL": "https://bevry.me/wishlist",
+      "travisTLD": "com"
     }
+  },
+  "funding": {
+    "type": "cooperative",
+    "url": "https://bevry.me/fund"
   },
   "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
@@ -95,7 +98,7 @@
         "flow type comments"
       ],
       "engines": {
-        "node": "8 || 10 || 11 || 12",
+        "node": "8 || 10 || 12 || 13",
         "browsers": false
       }
     }
@@ -103,33 +106,33 @@
   "bin": "bin.js",
   "main": "source/index.js",
   "dependencies": {
-    "badges": "^1.3.0",
+    "badges": "^1.4.0",
     "caterpillar": "^3.2.0",
     "caterpillar-filter": "^3.1.0",
     "caterpillar-human": "^3.0.0",
-    "commander": "^3.0.1",
+    "commander": "^4.0.0",
     "eachr": "^3.2.0",
-    "extendr": "^3.4.1",
+    "extendr": "^3.5.0",
     "fellow": "^2.4.0",
-    "githubauthquerystring": "1.0.2",
+    "githubauthquerystring": "1.1.0",
     "node-fetch": "^2.6.0",
     "safefs": "^4.1.0",
     "season": "^6.0.2",
     "spdx-expression-parse": "^3.0.0",
     "spdx-license-list": "^6.1.0",
     "taskgroup": "5",
-    "typechecker": "^4.7.0"
+    "typechecker": "^4.8.0"
   },
   "devDependencies": {
-    "assert-helpers": "^4.9.6",
-    "eslint": "^6.3.0",
+    "assert-helpers": "^5.0.0",
+    "eslint": "^6.6.0",
     "eslint-config-bevry": "^1.2.1",
-    "eslint-config-prettier": "^6.2.0",
+    "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-flow-vars": "^0.5.0",
-    "eslint-plugin-prettier": "^3.1.0",
-    "flow-bin": "^0.107.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "flow-bin": "^0.111.3",
     "kava": "^3.1.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "safeps": "^7.0.1",
     "valid-directory": "^1.0.0"
   },
