--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.10.0",
+  "version": "1.11.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -96,43 +96,42 @@
         "flow type comments"
       ],
       "engines": {
-        "node": "8 || 10 || 12 || 13",
-        "browsers": false
+        "node": "8 || 10 || 12"
       }
     }
   ],
   "bin": "bin.js",
   "main": "source/index.js",
   "dependencies": {
-    "badges": "^1.4.0",
+    "badges": "^2.0.0",
     "caterpillar": "^3.3.0",
-    "caterpillar-filter": "^3.1.0",
-    "caterpillar-human": "^3.0.0",
+    "caterpillar-filter": "^4.0.0",
+    "caterpillar-human": "^4.0.0",
     "commander": "^4.0.1",
-    "eachr": "^3.2.0",
-    "extendr": "^3.5.0",
-    "fellow": "^2.4.0",
-    "githubauthquerystring": "1.1.0",
+    "eachr": "^4.1.0",
+    "extendr": "^4.0.0",
+    "fellow": "^3.0.0",
+    "githubauthquerystring": "2.0.0",
     "node-fetch": "^2.6.0",
-    "safefs": "^5.1.0",
+    "safefs": "5.1.0",
     "season": "^6.0.2",
     "spdx-expression-parse": "^3.0.0",
     "spdx-license-list": "^6.1.0",
-    "taskgroup": "6",
-    "typechecker": "^4.9.0"
+    "taskgroup": "6.1.0",
+    "typechecker": "^4.11.0"
   },
   "devDependencies": {
-    "assert-helpers": "^5.2.1",
+    "assert-helpers": "5.4.0",
     "eslint": "^6.6.0",
-    "eslint-config-bevry": "^1.2.1",
-    "eslint-config-prettier": "^6.5.0",
+    "eslint-config-bevry": "^1.3.0",
+    "eslint-config-prettier": "^6.6.0",
     "eslint-plugin-flow-vars": "^0.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "flow-bin": "^0.112.0",
-    "kava": "^3.2.0",
+    "kava": "4.1.0",
     "prettier": "^1.19.1",
-    "safeps": "^8.1.0",
-    "valid-directory": "^1.0.0"
+    "safeps": "8.1.0",
+    "valid-directory": "^1.1.1"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
