--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.11.0",
+  "version": "1.12.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -100,7 +100,10 @@
       }
     }
   ],
-  "bin": "bin.js",
+  "boundation": {
+    "adaptive": false
+  },
+  "bin": "source/bin.js",
   "main": "source/index.js",
   "dependencies": {
     "badges": "^2.0.0",
@@ -113,12 +116,12 @@
     "fellow": "^3.0.0",
     "githubauthquerystring": "2.0.0",
     "node-fetch": "^2.6.0",
-    "safefs": "5.1.0",
+    "safefs": "5.2.0",
     "season": "^6.0.2",
     "spdx-expression-parse": "^3.0.0",
     "spdx-license-list": "^6.1.0",
-    "taskgroup": "6.1.0",
-    "typechecker": "^4.11.0"
+    "taskgroup": "6.2.0",
+    "typechecker": "^5.0.0"
   },
   "devDependencies": {
     "assert-helpers": "5.4.0",
@@ -130,15 +133,15 @@
     "flow-bin": "^0.112.0",
     "kava": "4.1.0",
     "prettier": "^1.19.1",
-    "safeps": "8.1.0",
-    "valid-directory": "^1.1.1"
+    "safeps": "9.0.0",
+    "valid-directory": "^1.3.0"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
     "our:compile": "echo no need for this project",
     "our:deploy": "echo no need for this project",
     "our:meta": "npm run our:meta:projectz",
-    "our:meta:projectz": "./bin.js compile",
+    "our:meta:projectz": "npx . compile",
     "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
     "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
     "our:release:check-dirty": "git diff --exit-code",
