--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.12.0",
+  "version": "1.13.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -106,34 +106,34 @@
   "bin": "source/bin.js",
   "main": "source/index.js",
   "dependencies": {
-    "badges": "^2.0.0",
+    "badges": "^2.2.0",
     "caterpillar": "^3.3.0",
-    "caterpillar-filter": "^4.0.0",
-    "caterpillar-human": "^4.0.0",
+    "caterpillar-filter": "^4.2.0",
+    "caterpillar-human": "^4.2.0",
     "commander": "^4.0.1",
-    "eachr": "^4.1.0",
-    "extendr": "^4.0.0",
-    "fellow": "^3.0.0",
-    "githubauthquerystring": "2.0.0",
+    "eachr": "^4.3.0",
+    "extendr": "^4.1.0",
+    "fellow": "^3.1.0",
+    "githubauthquerystring": "2.1.0",
     "node-fetch": "^2.6.0",
-    "safefs": "5.2.0",
+    "safefs": "^5.2.0",
     "season": "^6.0.2",
     "spdx-expression-parse": "^3.0.0",
     "spdx-license-list": "^6.1.0",
-    "taskgroup": "6.2.0",
+    "taskgroup": "^6.2.0",
     "typechecker": "^5.0.0"
   },
   "devDependencies": {
-    "assert-helpers": "5.4.0",
-    "eslint": "^6.6.0",
-    "eslint-config-bevry": "^1.3.0",
-    "eslint-config-prettier": "^6.6.0",
+    "assert-helpers": "^5.6.0",
+    "eslint": "^6.7.2",
+    "eslint-config-bevry": "^2.1.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-flow-vars": "^0.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "flow-bin": "^0.112.0",
-    "kava": "4.1.0",
+    "kava": "^4.2.0",
     "prettier": "^1.19.1",
-    "safeps": "9.0.0",
+    "safeps": "^9.0.0",
     "valid-directory": "^1.3.0"
   },
   "scripts": {
