--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.14.0",
+  "version": "1.15.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -34,6 +34,7 @@
       "daviddm",
       "daviddmdev",
       "---",
+      "githubsponsors",
       "patreon",
       "flattr",
       "liberapay",
@@ -44,6 +45,7 @@
       "wishlist"
     ],
     "config": {
+      "githubSponsorsUsername": "balupton",
       "buymeacoffeeUsername": "balupton",
       "cryptoURL": "https://bevry.me/crypto",
       "flattrUsername": "balupton",
@@ -96,32 +98,30 @@
         "flow type comments"
       ],
       "engines": {
-        "node": "8 || 10 || 12"
+        "node": "8 || 10 || 12 || 13"
       }
     }
   ],
-  "boundation": {
-    "adaptive": false
-  },
   "bin": "source/bin.js",
+  "type": "commonjs",
   "main": "source/index.js",
   "dependencies": {
-    "badges": "^2.3.0",
+    "badges": "^3.0.0",
     "caterpillar": "^4.0.0",
-    "caterpillar-filter": "^4.3.0",
-    "caterpillar-human": "^4.3.0",
+    "caterpillar-filter": "^4.4.0",
+    "caterpillar-human": "^4.4.0",
     "commander": "^4.0.1",
     "eachr": "^4.4.0",
     "extendr": "^4.2.0",
     "fellow": "^3.2.0",
     "githubauthquerystring": "2.2.0",
     "node-fetch": "^2.6.0",
-    "safefs": "^5.3.0",
+    "safefs": "^5.4.0",
     "season": "^6.0.2",
     "spdx-expression-parse": "^3.0.0",
     "spdx-license-list": "^6.1.0",
-    "taskgroup": "^6.3.0",
-    "typechecker": "^5.1.0"
+    "taskgroup": "^6.4.0",
+    "typechecker": "^6.0.0"
   },
   "devDependencies": {
     "assert-helpers": "^5.7.0",
@@ -130,11 +130,11 @@
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-flow-vars": "^0.5.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "flow-bin": "^0.112.0",
-    "kava": "^4.2.0",
+    "flow-bin": "^0.113.0",
+    "kava": "^4.3.0",
     "prettier": "^1.19.1",
-    "safeps": "^9.1.0",
-    "valid-directory": "^1.4.0"
+    "safeps": "^9.2.0",
+    "valid-directory": "^1.5.0"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
@@ -166,5 +166,8 @@
   "prettier": {
     "semi": false,
     "singleQuote": true
+  },
+  "boundation": {
+    "adaptive": false
   }
 }
