--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.18.0",
+  "version": "1.19.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -73,8 +73,7 @@
     "vsopvsop (https://github.com/vsopvsop)",
     "Zlatan Vasović <zlatanvasovic@gmail.com> (http://zdroid.github.io)",
     "Peter Chanthamynavong <peterkc@gmail.com> (http://www.blizzard.com)",
-    "Shahar Dawn Or <mightyiampresence@gmail.com> (http://mightyi.am)",
-    "dependabot-preview[bot] (http://github.com/apps/dependabot-preview)"
+    "Shahar Dawn Or <mightyiampresence@gmail.com> (http://mightyi.am)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/projectz/issues"
