--- a/package.json
+++ b/package.json
@@ -105,33 +105,31 @@
   "type": "commonjs",
   "main": "source/index.js",
   "dependencies": {
-    "badges": "^3.1.0",
+    "badges": "^4.1.0",
     "caterpillar": "^4.0.0",
-    "caterpillar-filter": "^4.5.0",
-    "caterpillar-human": "^4.5.0",
-    "commander": "^4.0.1",
+    "caterpillar-filter": "^5.1.0",
+    "caterpillar-human": "^5.1.0",
+    "commander": "^5.1.0",
     "eachr": "^4.5.0",
-    "extendr": "^4.3.0",
-    "fellow": "^3.3.0",
-    "githubauthquerystring": "2.3.0",
-    "node-fetch": "^2.6.0",
+    "extendr": "^5.1.0",
+    "fellow": "^6.5.0",
     "safefs": "^5.5.0",
     "season": "^6.0.2",
     "spdx-expression-parse": "^3.0.0",
-    "spdx-license-list": "^6.1.0",
+    "spdx-license-list": "^6.2.0",
     "taskgroup": "^6.5.0",
-    "typechecker": "^6.3.0"
+    "typechecker": "^6.4.0",
+    "typescript": "^3.8.3"
   },
   "devDependencies": {
-    "assert-helpers": "^5.8.0",
-    "eslint": "^6.7.2",
-    "eslint-config-bevry": "^2.3.0",
-    "eslint-config-prettier": "^6.7.0",
+    "assert-helpers": "^6.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-bevry": "^3.4.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-flow-vars": "^0.5.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "flow-bin": "^0.114.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "kava": "^4.4.0",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.5",
     "safeps": "^9.3.0",
     "valid-directory": "^1.6.0"
   },
