--- a/package.json
+++ b/package.json
@@ -119,19 +119,17 @@
   "type": "commonjs",
   "main": "edition-es2019/index.js",
   "dependencies": {
-    "badges": "^4.1.0",
+    "badges": "^4.2.0",
     "caterpillar": "^4.0.0",
     "caterpillar-filter": "^5.1.0",
     "caterpillar-human": "^5.1.0",
-    "commander": "^5.1.0",
-    "eachr": "^4.5.0",
+    "cson-safe": "^1.0.5",
     "extendr": "^5.1.0",
     "fellow": "^6.5.0",
+    "get-cli-arg": "^5.0.0",
     "safefs": "^5.5.0",
-    "season": "^6.0.2",
     "spdx-expression-parse": "^3.0.0",
     "spdx-license-list": "^6.2.0",
-    "taskgroup": "^6.5.0",
     "typechecker": "^6.4.0"
   },
   "devDependencies": {
@@ -139,6 +137,7 @@
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "assert-helpers": "^6.2.0",
+    "editions": "^2.3.0",
     "eslint": "^6.8.0",
     "eslint-config-bevry": "^3.4.0",
     "eslint-config-prettier": "^6.11.0",
