--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "1.19.1",
+  "version": "2.0.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -58,26 +58,31 @@
       "opencollectiveUsername": "bevry",
       "patreonUsername": "bevry",
       "paypalURL": "https://bevry.me/paypal",
-      "wishlistURL": "https://bevry.me/wishlist"
+      "wishlistURL": "https://bevry.me/wishlist",
+      "travisTLD": "com",
+      "githubUsername": "bevry",
+      "githubRepository": "projectz",
+      "githubSlug": "bevry/projectz",
+      "npmPackageName": "projectz"
     }
   },
   "funding": "https://bevry.me/fund",
   "author": "2013+ Bevry Pty Ltd <us@bevry.me> (http://bevry.me)",
   "maintainers": [
-    "Benjamin Lupton <b@lupton.cc> (http://balupton.com)",
-    "Rob Loach <robloach@gmail.com> (http://robloach.net)",
-    "James George <jamesgeorge998001@gmail.com> (http://ghuser.io/jamesgeorge007)"
+    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
+    "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)",
+    "James George <jamesgeorge998001@gmail.com> (https://github.com/jamesgeorge007)"
   ],
   "contributors": [
-    "Benjamin Lupton <b@lupton.cc> (http://balupton.com)",
+    "Benjamin Lupton <b@lupton.cc> (https://github.com/balupton)",
     "Peter Flannery (https://github.com/pflannery)",
-    "Rob Loach <robloach@gmail.com> (http://robloach.net)",
-    "James George <jamesgeorge998001@gmail.com> (http://ghuser.io/jamesgeorge007)",
+    "Rob Loach <robloach@gmail.com> (https://github.com/RobLoach)",
+    "James George <jamesgeorge998001@gmail.com> (https://github.com/jamesgeorge007)",
     "Zearin (https://github.com/Zearin)",
     "vsopvsop (https://github.com/vsopvsop)",
-    "Zlatan Vasović <zlatanvasovic@gmail.com> (http://zdroid.github.io)",
-    "Peter Chanthamynavong <peterkc@gmail.com> (http://www.blizzard.com)",
-    "Shahar Dawn Or <mightyiampresence@gmail.com> (http://mightyi.am)"
+    "Zlatan Vasović <zlatanvasovic@gmail.com> (https://github.com/zdroid)",
+    "Peter Chanthamynavong <peterkc@gmail.com> (https://github.com/peterkc)",
+    "Shahar Dawn Or <mightyiampresence@gmail.com> (https://github.com/mightyiam)"
   ],
   "bugs": {
     "url": "https://github.com/bevry/projectz/issues"
@@ -110,7 +115,7 @@
         "require"
       ],
       "engines": {
-        "node": true
+        "node": "14"
       }
     }
   ],
@@ -120,22 +125,21 @@
   "main": "edition-es2019/index.js",
   "dependencies": {
     "badges": "^4.2.0",
-    "caterpillar": "^4.0.0",
-    "caterpillar-filter": "^5.1.0",
-    "caterpillar-human": "^5.1.0",
-    "cson-safe": "^1.0.5",
-    "fellow": "^6.5.0",
+    "caterpillar": "^5.1.2",
+    "caterpillar-filter": "^6.0.0",
+    "caterpillar-human": "^6.0.0",
+    "cson-parser": "^4.0.4",
+    "fellow": "^6.6.0",
     "get-cli-arg": "^5.0.0",
     "spdx-expression-parse": "^3.0.0",
     "spdx-license-list": "^6.2.0",
     "typechecker": "^6.4.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.0.1",
+    "@bevry/update-contributors": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
     "assert-helpers": "^6.2.0",
-    "editions": "^2.3.0",
     "eslint": "^6.8.0",
     "eslint-config-bevry": "^3.4.0",
     "eslint-config-prettier": "^6.11.0",
@@ -147,22 +151,6 @@
     "typedoc": "^0.17.6",
     "typescript": "^3.8.3",
     "valid-directory": "^1.6.0"
-  },
-  "eslintConfig": {
-    "extends": [
-      "bevry"
-    ]
-  },
-  "prettier": {
-    "semi": false,
-    "singleQuote": true
-  },
-  "boundation": {
-    "targets": [
-      "ES2019"
-    ],
-    "ltsNodeOnly": true,
-    "desiredNodeOnly": true
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
@@ -189,5 +177,21 @@
     "our:verify:prettier": "prettier --write .",
     "our:verify:typescript": "tsc --noEmit --project tsconfig.json",
     "test": "node ./edition-es2019/test.js"
+  },
+  "eslintConfig": {
+    "extends": [
+      "bevry"
+    ]
+  },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true
+  },
+  "boundation": {
+    "targets": [
+      "ES2019"
+    ],
+    "ltsNodeOnly": true,
+    "desiredNodeOnly": true
   }
 }
