--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "2.8.0",
+  "version": "2.9.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -124,73 +124,57 @@
   "type": "commonjs",
   "main": "edition-es2019/index.js",
   "dependencies": {
-    "badges": "^4.11.0",
-    "caterpillar": "^5.8.0",
-    "caterpillar-filter": "^6.8.0",
-    "caterpillar-human": "^6.8.0",
+    "badges": "^4.9.0",
+    "caterpillar": "^5.6.0",
+    "caterpillar-filter": "^6.6.0",
+    "caterpillar-human": "^6.6.0",
     "cson-parser": "^4.0.4",
-    "fellow": "^6.12.0",
-    "get-cli-arg": "^5.6.0",
+    "fellow": "^6.11.0",
+    "get-cli-arg": "^5.5.0",
     "spdx-expression-parse": "^3.0.1",
     "spdx-license-list": "^6.2.0",
-    "typechecker": "^7.6.0",
-    "@bevry/update-contributors": "^1.10.0",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
-    "assert-helpers": "^6.10.0",
-    "eslint": "^7.3.0",
-    "eslint-config-bevry": "^3.10.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
-    "kava": "^5.6.0",
-    "make-deno-edition": "^0.9.0",
-    "prettier": "^2.0.5",
-    "safeps": "^10.5.0",
-    "surge": "^0.21.3",
-    "typedoc": "^0.17.7",
-    "typescript": "^3.9.5",
-    "valid-directory": "^2.4.0"
+    "typechecker": "7.5.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.10.0",
+    "@bevry/update-contributors": "1.9.0",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.3.0",
-    "assert-helpers": "^6.10.0",
+    "assert-helpers": "^6.8.0",
     "eslint": "^7.3.0",
-    "eslint-config-bevry": "^3.10.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-bevry": "^3.8.0",
+    "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "kava": "^5.6.0",
-    "make-deno-edition": "^0.9.0",
+    "kava": "^5.7.0",
+    "make-deno-edition": "^0.9.1",
     "prettier": "^2.0.5",
-    "safeps": "^10.5.0",
+    "safeps": "^10.4.0",
     "surge": "^0.21.3",
     "typedoc": "^0.17.7",
     "typescript": "^3.9.5",
-    "valid-directory": "^2.4.0"
+    "valid-directory": "2.2.0"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
-    "our:compile": "npm run our:compile:deno && npm run our:compile:edition-es2019 && npm run our:compile:types",
+    "our:compile": "yarn run our:compile:deno && yarn run our:compile:edition-es2019 && yarn run our:compile:types",
     "our:compile:deno": "make-deno-edition --attempt",
     "our:compile:edition-es2019": "tsc --module commonjs --target ES2019 --outDir ./edition-es2019 --project tsconfig.json && ( test ! -d edition-es2019/source || ( mv edition-es2019/source edition-temp && rm -Rf edition-es2019 && mv edition-temp edition-es2019 ) )",
     "our:compile:types": "tsc --project tsconfig.json --emitDeclarationOnly --declaration --declarationMap --declarationDir ./compiled-types && ( test ! -d compiled-types/source || ( mv compiled-types/source edition-temp && rm -Rf compiled-types && mv edition-temp compiled-types ) )",
     "our:deploy": "echo no need for this project",
-    "our:meta": "npm run our:meta:contributors && npm run our:meta:docs && npm run our:meta:projectz",
+    "our:meta": "yarn run our:meta:contributors && yarn run our:meta:docs && yarn run our:meta:projectz",
     "our:meta:contributors": "update-contributors",
-    "our:meta:docs": "npm run our:meta:docs:typedoc",
+    "our:meta:docs": "yarn run our:meta:docs:typedoc",
     "our:meta:docs:typedoc": "rm -Rf ./docs && typedoc --mode file --exclude '**/+(*test*|node_modules)' --excludeExternals --name \"$npm_package_name\" --readme ./README.md --out ./docs ./source",
     "our:meta:projectz": "npx . compile",
-    "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
+    "our:release": "yarn run our:release:prepare && yarn run our:release:check-changelog && yarn run our:release:check-dirty && yarn run our:release:tag && yarn run our:release:push",
     "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
     "our:release:check-dirty": "git diff --exit-code",
-    "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
+    "our:release:prepare": "yarn run our:clean && yarn run our:compile && yarn run our:test && yarn run our:meta",
     "our:release:push": "git push origin master && git push origin --tags",
     "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
-    "our:setup": "npm run our:setup:install",
-    "our:setup:install": "npm install",
-    "our:test": "npm run our:verify && npm test",
-    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:prettier",
+    "our:setup": "yarn run our:setup:install",
+    "our:setup:install": "yarn install --ignore-engines",
+    "our:test": "yarn run our:verify && yarn test",
+    "our:verify": "yarn run our:verify:directory && yarn run our:verify:eslint && yarn run our:verify:prettier",
     "our:verify:directory": "valid-directory",
     "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
     "our:verify:prettier": "prettier --write .",
