--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "title": "Projectz",
   "name": "projectz",
-  "version": "2.11.0",
+  "version": "2.12.0",
   "description": "Stop wasting time syncing and updating your project's README and Package Files!",
   "homepage": "https://github.com/bevry/projectz",
   "license": "MIT",
@@ -118,65 +118,85 @@
       "engines": {
         "node": "14"
       }
+    },
+    {
+      "description": "TypeScript compiled against ES2019 for Node.js with Import for modules",
+      "directory": "edition-node-esm",
+      "entry": "index.js",
+      "tags": [
+        "javascript",
+        "import"
+      ],
+      "engines": {
+        "node": true,
+        "browsers": false
+      }
     }
   ],
-  "bin": "bin.js",
+  "bin": "bin.cjs",
   "types": "./compiled-types/",
-  "type": "commonjs",
+  "type": "module",
   "main": "edition-es2019/index.js",
+  "exports": {
+    "node": {
+      "import": "./edition-node-esm/index.js",
+      "require": "./edition-es2019/index.js"
+    }
+  },
   "dependencies": {
-    "badges": "^4.14.0",
-    "caterpillar": "^5.11.0",
-    "caterpillar-filter": "^6.11.0",
-    "caterpillar-human": "^6.11.0",
-    "cson-parser": "^4.0.4",
-    "errlop": "^3.10.0",
-    "fellow": "^6.15.0",
-    "get-cli-arg": "^6.1.0",
+    "badges": "^4.19.0",
+    "caterpillar": "^5.15.0",
+    "caterpillar-filter": "^6.15.0",
+    "caterpillar-human": "^6.15.0",
+    "cson-parser": "^4.0.5",
+    "errlop": "^3.14.0",
+    "fellow": "^6.17.0",
+    "get-cli-arg": "^6.4.0",
     "spdx-expression-parse": "^3.0.1",
     "spdx-license-list": "^6.2.0",
-    "typechecker": "7.10.0"
+    "typechecker": "^7.11.0"
   },
   "devDependencies": {
-    "@bevry/update-contributors": "^1.12.0",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "assert-helpers": "^6.13.0",
-    "eslint": "^7.3.1",
-    "eslint-config-bevry": "^3.13.0",
+    "@bevry/update-contributors": "^1.13.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "assert-helpers": "^6.18.0",
+    "eslint": "^7.5.0",
+    "eslint-config-bevry": "^3.17.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "kava": "^5.8.0",
-    "make-deno-edition": "^0.14.0",
+    "kava": "^5.9.0",
+    "make-deno-edition": "^0.15.0",
     "prettier": "^2.0.5",
-    "safeps": "^10.9.0",
-    "surge": "^0.21.3",
-    "typedoc": "^0.17.7",
-    "typescript": "^3.9.5",
-    "valid-directory": "^2.5.0"
+    "safeps": "^10.10.0",
+    "surge": "^0.21.6",
+    "typedoc": "^0.17.8",
+    "typescript": "^3.9.7",
+    "valid-directory": "^2.6.0"
   },
   "scripts": {
     "our:clean": "rm -Rf ./docs ./edition* ./es2015 ./es5 ./out ./.next",
-    "our:compile": "yarn run our:compile:deno && yarn run our:compile:edition-es2019 && yarn run our:compile:types",
+    "our:compile": "npm run our:compile:deno && npm run our:compile:edition-es2019 && npm run our:compile:edition-node-esm && npm run our:compile:types",
     "our:compile:deno": "make-deno-edition --attempt",
-    "our:compile:edition-es2019": "tsc --module commonjs --target ES2019 --outDir ./edition-es2019 --project tsconfig.json && ( test ! -d edition-es2019/source || ( mv edition-es2019/source edition-temp && rm -Rf edition-es2019 && mv edition-temp edition-es2019 ) )",
+    "our:compile:edition-es2019": "tsc --module commonjs --target ES2019 --outDir ./edition-es2019 --project tsconfig.json && ( test ! -d edition-es2019/source || ( mv edition-es2019/source edition-temp && rm -Rf edition-es2019 && mv edition-temp edition-es2019 ) ) && echo '{\"type\": \"commonjs\"}' > edition-es2019/package.json",
+    "our:compile:edition-node-esm": "tsc --module ESNext --target ES2019 --outDir ./edition-node-esm --project tsconfig.json && ( test ! -d edition-node-esm/source || ( mv edition-node-esm/source edition-temp && rm -Rf edition-node-esm && mv edition-temp edition-node-esm ) ) && echo '{\"type\": \"module\"}' > edition-node-esm/package.json",
     "our:compile:types": "tsc --project tsconfig.json --emitDeclarationOnly --declaration --declarationMap --declarationDir ./compiled-types && ( test ! -d compiled-types/source || ( mv compiled-types/source edition-temp && rm -Rf compiled-types && mv edition-temp compiled-types ) )",
     "our:deploy": "echo no need for this project",
-    "our:meta": "yarn run our:meta:contributors && yarn run our:meta:docs && yarn run our:meta:projectz",
+    "our:meta": "npm run our:meta:contributors && npm run our:meta:docs && npm run our:meta:projectz",
     "our:meta:contributors": "update-contributors",
-    "our:meta:docs": "yarn run our:meta:docs:typedoc",
+    "our:meta:docs": "npm run our:meta:docs:typedoc",
     "our:meta:docs:typedoc": "rm -Rf ./docs && typedoc --mode file --exclude '**/+(*test*|node_modules)' --excludeExternals --name \"$npm_package_name\" --readme ./README.md --out ./docs ./source",
     "our:meta:projectz": "npx . compile",
-    "our:release": "yarn run our:release:prepare && yarn run our:release:check-changelog && yarn run our:release:check-dirty && yarn run our:release:tag && yarn run our:release:push",
+    "our:release": "npm run our:release:prepare && npm run our:release:check-changelog && npm run our:release:check-dirty && npm run our:release:tag && npm run our:release:push",
     "our:release:check-changelog": "cat ./HISTORY.md | grep v$npm_package_version || (echo add a changelog entry for v$npm_package_version && exit -1)",
     "our:release:check-dirty": "git diff --exit-code",
-    "our:release:prepare": "yarn run our:clean && yarn run our:compile && yarn run our:test && yarn run our:meta",
+    "our:release:prepare": "npm run our:clean && npm run our:compile && npm run our:test && npm run our:meta",
     "our:release:push": "git push origin master && git push origin --tags",
     "our:release:tag": "export MESSAGE=$(cat ./HISTORY.md | sed -n \"/## v$npm_package_version/,/##/p\" | sed 's/## //' | awk 'NR>1{print buf}{buf = $0}') && test \"$MESSAGE\" || (echo 'proper changelog entry not found' && exit -1) && git tag v$npm_package_version -am \"$MESSAGE\"",
-    "our:setup": "yarn run our:setup:install",
-    "our:setup:install": "yarn install --ignore-engines",
-    "our:test": "yarn run our:verify && yarn test",
-    "our:verify": "yarn run our:verify:directory && yarn run our:verify:eslint && yarn run our:verify:prettier",
+    "our:setup": "npm run our:setup:install",
+    "our:setup:install": "npm install",
+    "our:test": "npm run our:verify && npm test",
+    "our:verify": "npm run our:verify:directory && npm run our:verify:eslint && npm run our:verify:prettier",
     "our:verify:directory": "valid-directory",
     "our:verify:eslint": "eslint --fix --ignore-pattern '**/*.d.ts' --ignore-pattern '**/vendor/' --ignore-pattern '**/node_modules/' --ext .mjs,.js,.jsx,.ts,.tsx ./source",
     "our:verify:prettier": "prettier --write .",
